@@ -2,6 +2,8 @@ Changes to Version 2.2-4
 
   o Corrected Slovenian translation (by Matjaz Jeran).
   
+  o Embeds 3D rgl graphs in HTML output from R Markdown.
+  
   o Small improvements and bug fixes.
 
 Changes to Version 2.2-3
